fixed service structure